--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: hello-world-react
     env: node
-    buildCommand: npm install && npm run build
+    buildCommand: npm install -g serve && npm run build
     startCommand: serve -s build
     envVars:
       - key: NODE_VERSION
